--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60af79">  <td>17/07/21 15:18:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountSignupNegative.ti()[pri:0, instance:com.playphone.msportsUI.AccountSignupNegative@3f49dace]">&gt;&gt;ti</td> 
+<tr bgcolor="60af79">  <td>17/07/25 12:37:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MenuDrawerWallet.ti()[pri:0, instance:com.playphone.msportsUI.MenuDrawerWallet@3f49dace]">&gt;&gt;ti</td> 
 <td>&nbsp;</td>  <td>main@329645619</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>17/07/21 15:19:08</td>   <td>11602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSignupNegative.SignupNegative()[pri:0, instance:com.playphone.msportsUI.AccountSignupNegative@3f49dace]">SignupNegative</td> 
+<tr bgcolor="60af79">  <td>17/07/25 12:37:57</td>   <td>26964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MenuDrawerWallet.TestValidLogin()[pri:0, instance:com.playphone.msportsUI.MenuDrawerWallet@3f49dace]">TestValidLogin</td> 
   <td>main@329645619</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>17/07/21 15:20:08</td>   <td>71588</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountSignupNegative.tearDown()[pri:0, instance:com.playphone.msportsUI.AccountSignupNegative@3f49dace]">&lt;&lt;tearDown</td> 
+<tr bgcolor="60af79">  <td>17/07/25 12:39:56</td>   <td>145675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MenuDrawerWallet.tearDown()[pri:0, instance:com.playphone.msportsUI.MenuDrawerWallet@3f49dace]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@329645619</td>   <td></td> </tr>
 </table>
