--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60af79">  <td>17/07/26 10:48:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AllGamesMenu.TestValidLogin()[pri:0, instance:com.playphone.msportsUI.AllGamesMenu@3f49dace]">TestValidLogin</td> 
+<tr bgcolor="60af79">  <td>17/07/27 15:49:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountLogout.TestValidLogin()[pri:0, instance:com.playphone.msportsUI.AccountLogout@3f49dace]">TestValidLogin</td> 
   <td>main@329645619</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>17/07/26 10:50:05</td>   <td>101294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AllGamesMenu.tearDown()[pri:0, instance:com.playphone.msportsUI.AllGamesMenu@3f49dace]">&lt;&lt;tearDown</td> 
+<tr bgcolor="60af79">  <td>17/07/27 15:51:58</td>   <td>119632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountLogout.tearDown()[pri:0, instance:com.playphone.msportsUI.AccountLogout@3f49dace]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@329645619</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>17/07/26 10:48:11</td>   <td>-12933</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AllGamesMenu.ti()[pri:0, instance:com.playphone.msportsUI.AllGamesMenu@3f49dace]">&gt;&gt;ti</td> 
+<tr bgcolor="60af79">  <td>17/07/27 15:49:45</td>   <td>-13508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountLogout.ti()[pri:0, instance:com.playphone.msportsUI.AccountLogout@3f49dace]">&gt;&gt;ti</td> 
 <td>&nbsp;</td>  <td>main@329645619</td>   <td></td> </tr>
 </table>
